# BestReviewer_TeamProject

./: .gitignore  CMakeLists.txt  README.md  REFERENCE.md  SETUP.md
.github/: pull_request_template.md
docs/: index.html  index.src_command_cache.cc.html  index.src_command_cache.h.html  index.src_command_command.cc.html  index.src_command_command.h.html  index.src_command_createchatroom.h.html  index.src_command_factory_command_creator.cc.html  index.src_command_factory_factory.h.html  index.src_command_factory_receiver_creator.cc.html  index.src_command_invoker.cc.html  index.src_command_invoker.h.html  index.src_command_joinchatroom.h.html  index.src_command_listchatrooms.h.html  index.src_command_login.h.html  index.src_command_logout.h.html  index.src_command_parameter_validator.cc.html  index.src_command_parameter_validator.h.html  index.src_command_quit.h.html  index.src_command_receiver_chat_receiver.h.html  index.src_command_receiver_create_receiver.h.html  (+86 more)
src/: CMakeLists.txt  hardtoname.cc  hardtoname.h  http_client.cc  http_client.h  http_plugin.h  main.cc  parameterhandler.h  request.cc  request.h  response.h  utils.cc  utils.h
src/command/: cache.cc  cache.h  command.cc  command.h  command_type.h  createchatroom.h  invoker.cc  invoker.h  joinchatroom.h  listchatrooms.h  listrooms.h  login.cc  login.h  logout.cc  logout.h  message_receiver.h  parameter_validator.cc  parameter_validator.h  quit.h  receiver.h  signup.cc  signup.h
src/command/factory/: command_creator.cc  command_creator.h  factory.h  receiver_creator.cc  receiver_creator.h
src/command/receiver/: chat_receiver.h  create_receiver.h  join_receiver.cc  join_receiver.h  list_receiver.h  login_receiver.h  logout_receiver.h  receiver.h  room_receiver.h  signup_receiver.h  user_receiver.h
src/common/exception/: base_exception.h
src/common/exception/chat/: fail_parse_receive_message_reseponse_exception.h  fail_receive_message_exception.h  fail_send_message_exception.h  invalid_chat_repository_exception.h
src/common/exception/command/: invalid_command_exception.h
src/common/exception/json/: Invalid_json_string_exception.h  invalid_json_serializer_exception.h
src/common/exception/network/: authentication_failure_exception.h  connection_failure_exception.h  dns_resolving_failure_exception.h  internal_exception.h
src/common/exception/parameter/: invalid_parameter_exception.h
src/common/exception/room/: fail_create_room_exception.h  fail_parse_retrieve_room_response_exception.h  fail_retrieve_room_exception.h  invalid_room_repository_exception.h
src/common/exception/thread/: fail_thread_attr_destroy.h  fail_thread_attr_init.h  fail_thread_create.h  fail_thread_join.h
src/common/exception/user/: fail_login_exception.h  fail_logout_exception.h  fail_parse_session_id_exception.h  fail_signup_exception.h  invalid_id_password_exception.h  invalid_user_repository_exception.h
src/http/: http_plugin.h
src/http/converter/: chat_dto_converter.cc  chat_dto_converter.h  json_serializer.cc  json_serializer.h  room_dto_converter.cc  room_dto_converter.h  user_dto_converter.cc  user_dto_converter.h
src/http/converter/exception/: base_json_exception.h  invalid_json_serializer_exception.h  invalid_json_string_exception.h
src/http/dto/: request.cc  request.h  response.cc  response.h
src/http/exception/network/: authentication_failure_exception.h  base_network_exception.h  connection_failure_exception.h  dns_resolving_failure_exception.h  general_network_exception.h  internal_exception.h
src/http/repository/: chat_http_repository.cc  chat_http_repository.h  room_http_repository.cc  room_http_repository.h  user_http_repository.cc  user_http_repository.h
src/interface/: json_serializer.h
src/interface/dto/: base_request.h  base_response.h  json_serializable.h
src/interface/dto/chat/: message.h  receive_message_request.h  receive_message_response.h  send_message_request.h  send_message_response.h
src/interface/dto/room/: create_room_request.h  create_room_response.h  retrieve_room_request.h  retrieve_room_response.h
src/interface/dto/user/: login_request.h  login_response.h  logout_request.h  logout_response.h  signup_request.h  signup_response.h
src/interface/repository/: chat_repository.h  room_repository.h  user_repository.h
src/plugin/: curl_client.cc  curl_client.h
src/plugin/curl/: json_serializer.h
src/plugin/curl/converter/: room_dto_converter.cc  room_dto_converter.h  user_dto_converter.cc  user_dto_converter.h
src/plugin/curl/exception/json/: Invalid_json_string_exception.h  invalid_json_serializer_exception.h
src/plugin/curl/repository/: user_http_repository.cc  user_http_repository.h
src/ui_helper/: ansi_color.h
src/util/: util.cc  util.h
test/: CMakeLists.txt  api_test.cc  cache_test.cc  color_test.cc  command_test.cc  factory.cc  functionality.cc  hardtonametest.cc  http_client_test.cc  http_plugin_test.cc  json_serializer_test.cc  parameter_test.cc  signup_request_test.cc  user_repository_test.cc
test/repository/: chat_repository_test.cc  repository_test_fixture.h  room_repository_test.cc  user_repository_test.cc
(+1 files in other folders)
